--- a/01-http/02-servidor-web-nodejs/api-web/publico/webSockets/index.html
+++ b/01-http/02-servidor-web-nodejs/api-web/publico/webSockets/index.html
@@ -11,7 +11,7 @@
     <title>Document</title>
 </head>
 <body>
-<h1 id="titulo">HOLA MUNDO</h1>
++<h1 id="titulo">HOLA MUNDO</h1>
 <p class="par">PRIMERO</p>
 <div id="contenedor-chat">
 
@@ -113,6 +113,8 @@
         )
     }
 </script>
+
+
 
 
 </body>
